jQuery UI, Modernizr & JsFiddle

--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@ el.style.display = '';      // Ne fait que ce que vous lui demandez
             <section>
                 <h2>Autres Frameworks généraux</h2>
                 <ul>
+                    <li><a href="https://jqueryui.com/">jQuery UI</a> : librairie de composants associée à jQuery</li>
                     <li><a href="http://yuilibrary.com/">YUI</a> : librairie de composants de Yahoo!</li>
                     <li><a href="http://zeptojs.com/">ZeptoJS</a> : framework très minimaliste ayant la particularité de proposer un sous ensemble de l'API jQuery. Peut habilement remplacer ce dernier, mais attention à la compatibilité navigateur.</li>
                     <li><a href="http://zeptojs.com/">Dojo Toolkit</a> : librairie de composants dont le développement est sponsorisé par IBM et SitePen</li>
@@ -748,6 +749,7 @@ el.style.display = '';      // Ne fait que ce que vous lui demandez
                 <h2>Autres librairies à connaitre</h2>
                 <ul>
                     <li><a href="https://code.google.com/p/html5shiv/">HTML5shiv.js</a> : polyfill HTML5 créé par <a href="https://twitter.com/sjoerd_visscher">Sjoerd Visscher</a>, maintenu par <a href="https://github.com/aFarkas">Alexander Farkas</a>.</li>
+                    <li><a href="http://modernizr.com/">Modernizr</a> : ensemble de polyfills et de détecteurs de features HTML5 et CSS3</a>.</li>
                 </ul>
             </section>
             <section>
@@ -761,6 +763,12 @@ el.style.display = '';      // Ne fait que ce que vous lui demandez
             <section>
                 <h2>Quelques outils bien pratiques</h2>
                 <h3>pour mieux faire du Javascript</h3>
+            </section>
+            <section>
+                <h2>Partager un snippet</h2>
+                <ul>
+                    <li><a href="http://jsfiddle.net/">JsFiddle</a> : vous permet de partager rapidement un snippet de code</li>
+                </ul>
             </section>
             <section>
                 <h2>Qualité</h2>
