--- a/index.html
+++ b/index.html
@@ -775,6 +775,7 @@ el.style.display = '';      // Ne fait que ce que vous lui demandez
                 <ul>
                     <li><a href="http://www.jslint.com/">JSLint</a> : outil d'audit de code de Douglas Crockford (Yahoo, inventeur de JSON et auteur de <a href="http://shop.oreilly.com/product/9780596517748.do">JavaScript: The Good Parts</a>. JSLint est utile, bien que très tatillon, voire intransigeant.</li>
                     <li><a href="http://www.jshint.com/">JSHint</a> : fork JSLint de <a href="Anton Kovalyov">Anton Kovalyov</a>, pour développer un outil plus proche de la communauté.</li>
+                    <li><a href="http://jsmanners.com/">JS Manners</a> : pour évaluer un script fourni par un tiers.</li>
                 </ul>
                 <blockquote cite="http://brendaneich.com/2010/11/paren-free/">
                     &ldquo;JSLint can suck it&rdquo;, Brendan Eich
