Node, Casper et Slimer

--- a/index.html
+++ b/index.html
@@ -860,6 +860,13 @@ el.style.display = '';      // Ne fait que ce que vous lui demandez
                     <li><a href="https://www.dartlang.org/">Dart</a> : langage de développement Web productif, compilant en JavaScript, livré avec son éditeur. Par Goofle.</li>
                 </ul>
             </section>
+            <section>
+                <h2>Les portes ouvertes par Javascript</h2>
+                <ul>
+                    <li><a href="http://nodejs.org/">Node</a> : le retour de Javascript côté serveur, pour des applications vraiment scalables.</li>
+                    <li><a href="http://casperjs.org/">Casper</a> : tests fonctionnels sur Gecko (via <a href="http://slimerjs.org/">Slimmer</a>) et Webkit(via <a href="http://phantomjs.org/">Phantom</a>).</li>
+                </ul>
+            </section>
         </section>
         <section>
             <section>
