--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@ result = [] + []; // ""
 result = {} + [];
                 </code></pre>
                 <pre class="fragment" data-fragment-index="1"><code data-trim contenteditable class="js">
-result = [] + {}; // [object Object]
+result = {} + []; // [object Object]
                 </code></pre>
                 <p class="fragment" data-fragment-index="1"><img title="WTF ?!" src="img/wtf2.gif" /></p>
             </section>
